# quant-system

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  template_config_market_data.toml
crates/backtest/: Cargo.toml  profiles.toml
crates/backtest-server/: Cargo.toml  config.example.toml
crates/backtest-server/examples/: backtest_client.rs
crates/backtest-server/src/: config.rs  convert.rs  error.rs  handlers.rs  lib.rs  rpc_types.rs
crates/backtest-server/tests/: unit_tests.rs
crates/backtest/examples/: dummy_signal_test.rs
crates/backtest/src/: data_feed.rs  executor.rs  lib.rs  profile.rs  report.rs  runner.rs  strategy.rs
crates/core/: Cargo.toml
crates/core/src/: alert_register.rs  engine.rs  error.rs  lib.rs  position.rs  position_manager.rs  rules.rs  types.rs
crates/core/tests/: unit_tests.rs
crates/data-preprocess/: Cargo.toml  README.md  db-details.md
crates/data-preprocess/src/: convert.rs  db.rs  display.rs  error.rs  lib.rs  main.rs  models.rs  parquet_store.rs
crates/data-preprocess/src/parser/: bar_csv.rs  mod.rs  tick_csv.rs
crates/data-preprocess/tests/: unit_tests.rs
crates/market-data/: Cargo.toml  README.md  template_config_market_data.toml
crates/market-data/examples/: client.rs  command_client.rs  stream_client.rs
crates/market-data/src/: commands.rs  lib.rs  quant_error.rs  rpc_types.rs  utils.rs  xrpc_state.rs
crates/market-data/src/core/: ctrader_type.rs  mod.rs
crates/market-data/src/market_data/: ctrader_market.rs  market_handler.rs  market_manager.rs  mod.rs  utils.rs
crates/market-data/tests/: unit_tests.rs
crates/signal-parser/: Cargo.toml  parsers.example.toml
crates/signal-parser/src/: config.rs  error.rs  lib.rs  parser.rs  pipeline.rs  registry.rs  template.rs  types.rs
crates/symbols/: Cargo.toml  symbols.toml
crates/symbols/src/: error.rs  lib.rs
crates/symbols/tests/: unit_tests.rs
examples/: dummy_server.rs
proto/: market.proto
scripts/: extract_signals.py
src/: lib.rs  quant_error.rs  utils.rs
src/core/: mod.rs
src/grpc/: quant.rs
src/market_data/: ctrader_market.rs  market_handler.rs  market_manager.rs  mod.rs  price_alert.rs  utils.rs
src/rpc/: mod.rs
