[package]
name = "quant-trade"
version = "0.1.0"
edition = "2024"

[lib]
name = "quant"

[[bin]]
name = "market_data"
path = "src/bin/market_data.rs"

[dependencies]
dotenv = "0.15"
log = "0.4"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# rmp-serde = "1.3"
# rmpv = "1.3"
# mrpc = "0"
async-trait = "0.1"
thiserror = "2.0"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"

ctrader-fix = { version = "0.5" }
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
async-stream = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
toml = "0.8"

[build-dependencies]
tonic-prost-build = "0.14"
