[package]
name = "qs-backtest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backtesting engine — strategy and signal replay over historical market data"
keywords = ["backtest", "trading", "strategy", "simulation"]
categories = ["finance"]

[lib]
name = "qs_backtest"

[dependencies]
qs-core = { path = "../core" }
qs-data-preprocess = { path = "../data-preprocess" }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
