[package]
name = "qs-data-preprocess"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Historical market data storage and preprocessing CLI"
keywords = ["market-data", "parquet", "preprocessing", "ohlcv"]
categories = ["finance"]

[lib]
name = "data_preprocess"

[[bin]]
name = "data-preprocess"
path = "src/main.rs"

[features]
default = ["parquet"]
parquet = ["dep:polars"]
duckdb-backend = ["dep:duckdb"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
csv = { workspace = true }

# Parquet backend (default)
polars = { workspace = true, optional = true }

# DuckDB backend (opt-in)
duckdb = { workspace = true, optional = true }
