[package]
name = "market-data"
version = "0.1.0"
edition = "2024"

[lib]
name = "market_data"

[[bin]]
name = "market_data"
path = "src/bin/market_data.rs"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
toml = "0.8"

ctrader-fix = { version = "0.5" }
xrpc-rs = "0.2.1"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
