[package]
name = "qs-market-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Real-time market data service with shared memory IPC"
keywords = ["market-data", "ipc", "ctrader", "trading"]
categories = ["finance"]

[lib]
name = "market_data"

[[bin]]
name = "ctrader_market_data"
path = "src/bin/ctrader_market_data.rs"

[[bin]]
name = "market_data_client"
path = "src/bin/market_data_client.rs"
required-features = ["tui-client"]

[features]
default = []
tui-client = ["dep:ratatui", "dep:crossterm", "dep:futures"]

[dependencies]
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
nanoid = { workspace = true }
toml = { workspace = true }
ctrader-fix = { workspace = true }
xrpc-rs = { workspace = true }
qs-symbols = { path = "../symbols" }

# Optional — only pulled in by the tui-client feature
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
